// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NumericInput matches the snapshot (Disabled) 1`] = `
<DocumentFragment>
  .c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(0) {
  margin-bottom: var(--spacing-quarter);
}

.c6 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #1B1C1E;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  min-height: var(--size-2x);
  outline: none;
  padding: 0 var(--spacing-1x);
  width: 100%;
  border: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-height: 100%;
}

.c6::-webkit-input-placeholder {
  color: #60666E;
}

.c6::-moz-placeholder {
  color: #60666E;
}

.c6:-ms-input-placeholder {
  color: #60666E;
}

.c6::placeholder {
  color: #60666E;
}

.c6:disabled {
  background-color: #F1F2F2;
  border-color: #B7BBC2;
  color: #B7BBC2;
}

.c6:disabled,
.c6:disabled::-webkit-input-placeholder {
  color: #B7BBC2;
}

.c6:disabled,
.c6:disabled::-moz-placeholder {
  color: #B7BBC2;
}

.c6:disabled,
.c6:disabled:-ms-input-placeholder {
  color: #B7BBC2;
}

.c6:disabled,
.c6:disabled::placeholder {
  color: #B7BBC2;
}

.c6:-moz-read-only {
  background-color: rgb(0 0 0 / 0.03);
  border-color: transparent;
  color: #1B1C1E;
}

.c6:read-only {
  background-color: rgb(0 0 0 / 0.03);
  border-color: transparent;
  color: #1B1C1E;
}

.c6:focus,
.c6:disabled {
  border: 0;
  box-shadow: none;
}

.c4 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c4 > svg {
  height: 16px;
  width: 16px;
}

.c5 {
  padding-left: var(--spacing-1x);
}

.c2 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: var(--size-2x);
  background-color: #F1F2F2;
  border-color: #B7BBC2;
}

.c2:focus-within {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c2 .c3 {
  color: #B7BBC2;
}

.c1 .eds-TextInput-control {
  text-align: left;
}

.c1 .eds-TextInput-leftAdornment,
.c1 .eds-TextInput-rightAdornment {
  color: #1B1C1E;
}

<div
    class="c0 c1"
    data-testid="field-container"
  >
    <div
      class="c2 eds-TextInput-control"
    >
      <span
        class="c3 c4 c5 eds-TextInput-leftAdornment"
      >
        %
      </span>
      <input
        class="c6"
        data-testid="numeric-input"
        disabled=""
        id="uuid1"
        inputmode="numeric"
        type="text"
        value="50"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`NumericInput matches the snapshot (Invalid) 1`] = `
<DocumentFragment>
  .c2 {
  color: #CD2C23;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
}

.c3 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: var(--spacing-base);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #CD2C23;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-quarter);
}

.c7 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #1B1C1E;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  min-height: var(--size-2x);
  outline: none;
  padding: 0 var(--spacing-1x);
  width: 100%;
  border: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-height: 100%;
}

.c7::-webkit-input-placeholder {
  color: #60666E;
}

.c7::-moz-placeholder {
  color: #60666E;
}

.c7:-ms-input-placeholder {
  color: #60666E;
}

.c7::placeholder {
  color: #60666E;
}

.c7:disabled {
  background-color: #F1F2F2;
  border-color: #B7BBC2;
  color: #B7BBC2;
}

.c7:disabled,
.c7:disabled::-webkit-input-placeholder {
  color: #B7BBC2;
}

.c7:disabled,
.c7:disabled::-moz-placeholder {
  color: #B7BBC2;
}

.c7:disabled,
.c7:disabled:-ms-input-placeholder {
  color: #B7BBC2;
}

.c7:disabled,
.c7:disabled::placeholder {
  color: #B7BBC2;
}

.c7:-moz-read-only {
  background-color: rgb(0 0 0 / 0.03);
  border-color: transparent;
  color: #1B1C1E;
}

.c7:read-only {
  background-color: rgb(0 0 0 / 0.03);
  border-color: transparent;
  color: #1B1C1E;
}

.c7:focus,
.c7:disabled {
  border: 0;
  box-shadow: none;
}

.c5 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c5 > svg {
  height: 16px;
  width: 16px;
}

.c6 {
  padding-left: var(--spacing-1x);
}

.c4 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: var(--size-2x);
  border-color: #CD2C23;
}

.c4:focus-within {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 .eds-TextInput-control {
  text-align: left;
}

.c1 .eds-TextInput-leftAdornment,
.c1 .eds-TextInput-rightAdornment {
  color: #1B1C1E;
}

<div
    class="c0 c1"
    data-testid="field-container"
  >
    <span
      class="c2"
      data-testid="invalid-field"
      id="uuid1_invalid"
    >
      <svg
        class="c3"
        color="currentColor"
        focusable="false"
        height="16"
        icon-name="alert-octagon"
        width="16"
      />
      This is an error message
    </span>
    <div
      class="c4 eds-TextInput-control"
    >
      <span
        class="c5 c6 eds-TextInput-leftAdornment"
      >
        %
      </span>
      <input
        aria-describedby="uuid1_invalid"
        aria-invalid="true"
        class="c7"
        data-testid="numeric-input"
        id="uuid1"
        inputmode="numeric"
        type="text"
        value="50"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`NumericInput matches the snapshot (Normal - Adornment at end) 1`] = `
<DocumentFragment>
  .c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(0) {
  margin-bottom: var(--spacing-quarter);
}

.c3 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #1B1C1E;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  min-height: var(--size-2x);
  outline: none;
  padding: 0 var(--spacing-1x);
  width: 100%;
  border: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-height: 100%;
}

.c3::-webkit-input-placeholder {
  color: #60666E;
}

.c3::-moz-placeholder {
  color: #60666E;
}

.c3:-ms-input-placeholder {
  color: #60666E;
}

.c3::placeholder {
  color: #60666E;
}

.c3:disabled {
  background-color: #F1F2F2;
  border-color: #B7BBC2;
  color: #B7BBC2;
}

.c3:disabled,
.c3:disabled::-webkit-input-placeholder {
  color: #B7BBC2;
}

.c3:disabled,
.c3:disabled::-moz-placeholder {
  color: #B7BBC2;
}

.c3:disabled,
.c3:disabled:-ms-input-placeholder {
  color: #B7BBC2;
}

.c3:disabled,
.c3:disabled::placeholder {
  color: #B7BBC2;
}

.c3:-moz-read-only {
  background-color: rgb(0 0 0 / 0.03);
  border-color: transparent;
  color: #1B1C1E;
}

.c3:read-only {
  background-color: rgb(0 0 0 / 0.03);
  border-color: transparent;
  color: #1B1C1E;
}

.c3:focus,
.c3:disabled {
  border: 0;
  box-shadow: none;
}

.c4 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c4 > svg {
  height: 16px;
  width: 16px;
}

.c5 {
  padding-right: var(--spacing-1x);
}

.c2 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: var(--size-2x);
}

.c2:focus-within {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 .eds-TextInput-control {
  text-align: left;
}

.c1 .eds-TextInput-leftAdornment,
.c1 .eds-TextInput-rightAdornment {
  color: #1B1C1E;
}

<div
    class="c0 c1"
    data-testid="field-container"
  >
    <div
      class="c2 eds-TextInput-control"
    >
      <input
        class="c3"
        data-testid="numeric-input"
        id="uuid1"
        inputmode="numeric"
        type="text"
        value="50"
      />
      <span
        class="c4 c5 eds-TextInput-rightAdornment"
      >
        %
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NumericInput matches the snapshot (Normal - Adornment at start) 1`] = `
<DocumentFragment>
  .c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(0) {
  margin-bottom: var(--spacing-quarter);
}

.c5 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #1B1C1E;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  min-height: var(--size-2x);
  outline: none;
  padding: 0 var(--spacing-1x);
  width: 100%;
  border: 0;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-height: 100%;
}

.c5::-webkit-input-placeholder {
  color: #60666E;
}

.c5::-moz-placeholder {
  color: #60666E;
}

.c5:-ms-input-placeholder {
  color: #60666E;
}

.c5::placeholder {
  color: #60666E;
}

.c5:disabled {
  background-color: #F1F2F2;
  border-color: #B7BBC2;
  color: #B7BBC2;
}

.c5:disabled,
.c5:disabled::-webkit-input-placeholder {
  color: #B7BBC2;
}

.c5:disabled,
.c5:disabled::-moz-placeholder {
  color: #B7BBC2;
}

.c5:disabled,
.c5:disabled:-ms-input-placeholder {
  color: #B7BBC2;
}

.c5:disabled,
.c5:disabled::placeholder {
  color: #B7BBC2;
}

.c5:-moz-read-only {
  background-color: rgb(0 0 0 / 0.03);
  border-color: transparent;
  color: #1B1C1E;
}

.c5:read-only {
  background-color: rgb(0 0 0 / 0.03);
  border-color: transparent;
  color: #1B1C1E;
}

.c5:focus,
.c5:disabled {
  border: 0;
  box-shadow: none;
}

.c3 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #60666E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c3 > svg {
  height: 16px;
  width: 16px;
}

.c4 {
  padding-left: var(--spacing-1x);
}

.c2 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: var(--size-2x);
}

.c2:focus-within {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c1 .eds-TextInput-control {
  text-align: left;
}

.c1 .eds-TextInput-leftAdornment,
.c1 .eds-TextInput-rightAdornment {
  color: #1B1C1E;
}

<div
    class="c0 c1"
    data-testid="field-container"
  >
    <div
      class="c2 eds-TextInput-control"
    >
      <span
        class="c3 c4 eds-TextInput-leftAdornment"
      >
        %
      </span>
      <input
        class="c5"
        data-testid="numeric-input"
        id="uuid1"
        inputmode="numeric"
        type="text"
        value="50"
      />
    </div>
  </div>
</DocumentFragment>
`;
